change access modifier to privat; fix colum-gap

--- a/src/app/shared/components/order-candidate-list/order-per-diem-candidates-list/order-per-diem-candidates-list.component.scss
+++ b/src/app/shared/components/order-candidate-list/order-per-diem-candidates-list/order-per-diem-candidates-list.component.scss
@@ -36,8 +36,8 @@
 
   .grid-toolbar {
     display: flex;
-    column-gap: 50px;
-    
+    column-gap: 24px;
+
     .search {
       width: 280px;
     }
